--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,18 @@ pydantic>=2.5.0
 tenacity>=8.2.0
 python-dotenv>=1.0.0
 
+# MediaCrawler专用依赖
+playwright>=1.45.0
+Pillow>=9.5.0
+opencv-python>=4.8.0
+requests>=2.32.0
+parsel>=1.9.0
+pyexecjs>=1.5.0
+pandas>=2.2.0
+wordcloud>=1.9.0
+matplotlib>=3.9.0
+jieba>=0.42.1
+
 # 新增依赖
 sqlalchemy>=2.0.0
 alembic>=1.13.0
