feat: implement comprehensive error handling system
- Enhanced XHS platform with detailed error collection and analysis
- Added RetryError and inner exception extraction capabilities
- Modified TGE search API to include error_details field in response
- Implemented comprehensive error propagation from platform to API
- Added support for httpx TypeError detection and reporting
- Improved error debugging with complete tracebacks and retry information
- Consolidated test files and debug tools into organized structure
- Updated gitignore for better project file management

Error details now include:
- Full exception tracebacks
- RetryError internals with attempt counts
- Inner exception analysis (TypeError from httpx proxy issues)
- Keyword-level error breakdown
- Platform-specific error collection
- API response integration with detailed error information

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,13 @@ data/cache/
 
 # MediaCrawler generated files
 *_user_data_dir/
+browser_data/
+mediacrawler/browser_data/
+mediacrawler/data/
+**/browser_data/
+**/data/xhs/
+*.crdownload
+*.part
 
 # Temporary files
 *.tmp
@@ -84,19 +91,24 @@ data/cache/
 # Local config override
 .env.local
 config.local.py
+
 # Claude Code Kit - Generated Files
 claude-code-kit/
 .claude/
 .mcp/
 .mcp.json
 mcp-*.json
-*.tmp
 database.sqlite
-*.sqlite
-*.log
 *.cache
 *.backup
 *.bak
-.env.local
 CLAUDE.md
 rules/
+debug_tools
+tests
+
+# Debug and test files
+debug_*.py
+test_*.py
+check_*.py
+simple_*.py
