chore: add weibo platform configuration to .env.example
- WEIBO_COOKIE for authentication
- WEIBO_SEARCH_TYPE for search mode selection (综合/实时/热门)
- WEIBO_MAX_PAGES for pagination control
- WEIBO_RATE_LIMIT for request throttling
- WEIBO_ENABLED for platform toggle

Follows MULTI_PLATFORM_DEVELOPMENT_PLAN.md section 2.3.1 specifications

--- a/.env.example
+++ b/.env.example
@@ -38,3 +38,10 @@ DATA_RETENTION_DAYS=30
 
 # Web3关键词配置
 WEB3_KEYWORDS=TGE,代币发行,空投,IDO,新币上线,DeFi,Web3项目,撸毛,开启测试网,速撸
+
+# 微博平台配置 (Weibo)
+WEIBO_COOKIE=""
+WEIBO_SEARCH_TYPE="综合"  # 综合/实时/热门
+WEIBO_MAX_PAGES=10
+WEIBO_RATE_LIMIT=60
+WEIBO_ENABLED=true
