feat: complete Phase 1.5 WeiboPlatform improvements and error handling
- Fix relative import issues across crawler modules
- Implement delayed MediaCrawler module loading to avoid configuration conflicts
- Enhance Cookie validation with real API endpoint verification
- Improve error handling and graceful degradation when MediaCrawler unavailable
- Update .env.example with comprehensive Weibo configuration and Cookie guide
- Add robust platform availability checking with detailed logging
- Maintain backward compatibility while preparing for Phase 1.6 expansion

Phase 1.5 Complete: Current SimplifiedWeiboClient implementation validated with proper error handling and configuration management.

--- a/.env.example
+++ b/.env.example
@@ -40,8 +40,15 @@ DATA_RETENTION_DAYS=30
 WEB3_KEYWORDS=TGE,代币发行,空投,IDO,新币上线,DeFi,Web3项目,撸毛,开启测试网,速撸
 
 # 微博平台配置 (Weibo)
+# 微博Cookie获取步骤:
+# 1. 浏览器打开 https://m.weibo.cn 并登录
+# 2. 按F12打开开发者工具 -> Network标签
+# 3. 刷新页面，点击任意请求查看Request Headers
+# 4. 复制Cookie完整值填入下方
 WEIBO_COOKIE=""
-WEIBO_SEARCH_TYPE="综合"  # 综合/实时/热门
+WEIBO_SEARCH_TYPE="综合"  # 综合/实时/热门/视频
 WEIBO_MAX_PAGES=10
-WEIBO_RATE_LIMIT=60
+WEIBO_RATE_LIMIT=60  # 请求间隔(秒)
 WEIBO_ENABLED=true
+WEIBO_LOGIN_METHOD="cookie"  # cookie/qrcode
+WEIBO_HEADLESS=true  # 二维码模式使用false
