--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,17 @@ WEIBO_RATE_LIMIT=60  # 请求间隔(秒)
 WEIBO_ENABLED=true
 WEIBO_LOGIN_METHOD="cookie"  # cookie/qrcode
 WEIBO_HEADLESS=true  # 二维码模式使用false
+
+# 知乎平台配置 (Zhihu)
+# 知乎Cookie获取步骤:
+# 1. 浏览器打开 https://www.zhihu.com 并登录
+# 2. 按F12打开开发者工具 -> Network标签
+# 3. 刷新页面，点击任意请求查看Request Headers
+# 4. 复制Cookie完整值填入下方
+ZHIHU_COOKIE=""
+ZHIHU_SEARCH_TYPE="综合"  # 综合/问题/回答/文章/想法
+ZHIHU_MAX_PAGES=10
+ZHIHU_RATE_LIMIT=60  # 请求间隔(秒)
+ZHIHU_ENABLED=true
+ZHIHU_LOGIN_METHOD="cookie"  # cookie/qrcode
+ZHIHU_HEADLESS=true  # 二维码模式使用false
