feat: integrate MediaCrawler as Git submodule with zero-conflict setup
- Add MediaCrawler as Git submodule to external/MediaCrawler
- Create symbolic link for backward compatibility with existing paths
- Update .env.example to point to submodule location with fallback options
- Modify .gitignore to properly handle symbolic link
- Update README.md with submodule initialization instructions
- Add automated setup script for MediaCrawler submodule
- Fix test imports to use real MediaCrawler adapter instead of simplified version
- Verify all tests pass with real Zhihu data crawling functionality

This maintains full backward compatibility while providing a robust
Git submodule-based dependency management solution.

--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,10 @@ REDIS_PASSWORD=
 REDIS_DB=0
 
 # MediaCrawler配置路径
-MEDIACRAWLER_PATH=../MediaCrawler
+# 使用Git submodule位置（推荐）
+MEDIACRAWLER_PATH=./external/MediaCrawler
+# 如果您有独立的MediaCrawler安装，可以使用：
+# MEDIACRAWLER_PATH=../MediaCrawler
 
 # 爬虫配置
 CRAWLER_MAX_PAGES=5
